--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   },
   "author": "ArmFire1911",
   "dependencies": {
-    "discord.js": "^11.3.2"
+    "discord.js": "^11.3.2",
+    "sqlite3": "^4.0.0"
   }
 }
