--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   "author": "ArmFire1911",
   "dependencies": {
     "discord.js": "^11.3.2",
+    "request": "^2.83.0",
     "sqlite3": "^4.0.0"
   }
 }
