--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "ArmFire1911",
   "version": "1.0.0",
-  "description": "node another bot",
+  "description": "ArmFire1911",
   "scripts": {
     "start": "node ArmFire1911.js"
   },
