--- a/package.json
+++ b/package.json
@@ -3,11 +3,12 @@
   "version": "1.0.0",
   "description": "ArmFire1911",
   "scripts": {
-    "start": "node ArmFire1911.js"
+    "start": "node armfire1911.js"
   },
   "author": "ArmFire1911",
   "dependencies": {
     "discord.js": "^11.3.2",
+    "npm": "^6.1.0",
     "request": "^2.83.0",
     "sqlite3": "^4.0.0"
   }
