--- a/package.json
+++ b/package.json
@@ -7,9 +7,12 @@
   },
   "author": "ArmFire1911",
   "dependencies": {
-    "discord.js": "^11.3.2",
-    "npm": "^6.1.0",
-    "request": "^2.83.0",
+    "discord.js": "12.2.0",
+    "npm": "^6.14.5",
+    "request": "^2.88.2",
     "sqlite3": "^4.0.0"
-  }
+  },
+  "engines": {
+    "node": "12.16.x"
+  },
 }
